Fix: Achievement serialization error in parent dashboard
COMPLETE FIX for Hibernate lazy loading serialization errors:

1. Created AchievementDTO to avoid exposing Achievement entity
   - Prevents Hibernate proxy serialization issues
   - Clean separation between entity and API response

2. Updated ProgressReport to use AchievementDTO instead of Achievement entity
   - No more lazy-loaded Child relationship in response

3. Updated AchievementService and DashboardController
   - All achievement endpoints now return DTOs
   - Added mapToDTO helper method

4. Added @JsonIgnoreProperties to Achievement.child field as backup
   - Prevents serialization of Hibernate lazy initializer

Parent dashboard should now load without any serialization errors!